package exercise.ex02.ex02_2;

public interface Command {

    public abstract void execute();

}
