package practice.alarmfunc;

public class Alarm {

    public void start() {
        System.out.println("Alarming...");
    }

}
