package practice.lampfunc;

// 램프 클래스
public class Lamp {

    // 켜짐 메서드
    public void turnOn() {
        System.out.println("Lamp on");
    }

}
